# declare4py

./: .gitignore  Mike Log - grade5beginning.xes  MikeModel_Grade5.decl  README.md  generated_xes.xes  performance_test.py  pw  pyproject.toml  sepsis model.decl  sepsis.decl  sepsis.xes  setup.cfg  test.py  test_mp_checkers.py  test_mp_checkers_traces.py
declare_models/: data_model.decl
docs/declare4py/: api_functions.html  declare4py.html  index.html
src/api/: __init__.py  api_functions.py  declare4py.py
src/constraint_checkers/: __init__.py  choice.py  existence.py  negative_relation.py  relation.py
src/declare4py/: api_functions.py  checker_result.py  choice.py  conf_checking.py  decl_model.py  declare4py.py  discovery.py  existence.py  log_analyzer.py  log_generator.py  monitoring.py  mp_constants.py  query_checking.py  run_log_generator.py
src/enums/: __init__.py  mp_constants.py
src/models/: checker_result.py  decl_model.py  log_result.py  trace_result.py
src/mp_checkers_old/: test_mp_checkers.py
src/parsers/: __init__.py  decl_parser.py
test/: declare4py_performance.csv  performance_test.py  plot_performance.py
test/declare_models/: nodata_model.decl
test/test_models/: model1.decl  model2.decl  model3.decl  model4.decl  nodata_20_1.decl  nodata_20_2.decl  nodata_20_3.decl  nodata_20_4.decl
tests/: declare4py_performance.csv  performance_test.py  plot_performance.py
tutorials/: conformance_checking.ipynb  log_analysis.ipynb  model_discovery.ipynb  query_checking.ipynb  sepsis_model_discovered.decl  system_overview.ipynb
(+87 files in other folders)
